--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "@pinecone-database/pinecone": "^0.0.8",
+        "cohere-ai": "^5.1.0",
         "dotenv": "^16.0.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
