--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.0.9",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "classnames": "^2.3.2",
+    "cohere-ai": "^6.0.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "framer-motion": "^10.0.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
